--- a/React/IBM-eShipChain-Map/IBM-eShipChain-Map/package.json
+++ b/React/IBM-eShipChain-Map/IBM-eShipChain-Map/package.json
@@ -18,6 +18,7 @@
     "prop-types": "latest",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
